--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,105 @@
-.App {
-  text-align: center;
-}
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    }
+    
+    body {
+      background: linear-gradient(
+        90deg,
+        rgb(254, 254, 254) 0%,
+        rgb(106, 121, 254) 100%
+      );
+    }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+    .todo-app {
+        display: flex;
+        flex-direction: column;
+        justify-content: start;
+        width: 55%;
+        height: auto;
+        background: transparent;
+        border: 4px solid white;
+        text-align: center;
+        margin: 150px auto;
+        border-radius: 10px;
+        padding-bottom: 32px;  
+    }
+        
+    .complete {
+      text-decoration: line-through rgb(245, 245, 245);
+    }
+    
+    .todo-form {
+      margin-bottom: 32px;
+      display: flex;
+      justify-content: center;
+    }
+    
+    .todo-input {
+      padding: 14px 32px 14px 16px;
+      border-radius: 4px 0 0 4px;
+      border: 2px solid rgba(17, 122, 255, 1);
+      outline: none;
+      width: 320px;
+    }
+    
+    .todo-button {
+      padding: 16px;
+      border: none;
+      border-radius: 0 4px 4px 0;
+      cursor: pointer;
+      outline: none;
+      background: linear-gradient(
+        90deg,
+        rgba(17, 122, 255, 1) 0%,
+        rgba(20, 159, 255, 1) 100%
+      );
+      color: white;
+      text-transform: capitalize;
+    }
+    
+    .todo-container {
+       display: flex;
+      flex-direction: row;
+      position: relative; 
+    }
+    
+    .todo-row {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin: 4px auto;
+      color: rgb(30, 27, 27);
+      background: linear-gradient(
+        90deg,
+        rgba(20, 159, 255, 1) 0%,
+        rgba(17, 122, 255, 1) 100%
+      );
+      padding: 16px;
+      border-radius: 5px;
+      width: 90%;
+    }
+    
+    .iconsContainer {
+      display: flex;
+      align-items: center;
+      font-size: 24px;
+      cursor: pointer;
+    }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+    .count{
+        border-radius: 50%;
+        border: solid 2px #ffffff;
+        width: 50px;
+        height: 50px;
+        line-height: 1;
+        display: flex;
+        align-items: center;
+        justify-content: center;     
+        margin-left: 80%; 
+    }
+    .check{
+     height: 25px;
+     width: 15px;
+     }
